Issue #13. Created a email-picker component based off the location picker component

--- a/public/app/components/create-event-poll-form/create-event-poll-form.component.html
+++ b/public/app/components/create-event-poll-form/create-event-poll-form.component.html
@@ -1,4 +1,5 @@
 <div class="create-event-poll-form">
     <h3>Creator Info</h3>
     <location-picker></location-picker>
+    <email-picker></email-picker>
 </div>
