--- a/public/app/components/home-page/home-page.component.html
+++ b/public/app/components/home-page/home-page.component.html
@@ -7,7 +7,7 @@
 
         <h1 class="slogan">Hangout Planning Made Easy!</h1>
 
-        <a class="btn btn-default btn-lg" routerLink="createpoll">
+        <a class="btn btn-default btn-lg" routerLink="/createpoll">
             Start Hangout Poll
         </a>
         
@@ -37,5 +37,6 @@
                 </div>
             </div>
         </div>
+        
     </div><!-- end tabs -->
 </div>
