--- a/public/app/components/time-picker/time-picker.component.html
+++ b/public/app/components/time-picker/time-picker.component.html
@@ -1,12 +1,15 @@
-<!--<section class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">
-                Default behaviour (plugins default options)
-            </h3>
+<div class="form-inline">
+    <div id="{{idDatePicker}}" class="input-group date">
+        <input type="text" class="form-control"
+                />
+        <div class="input-group-addon">
+            <span class="glyphicon glyphicon-th"></span>
         </div>
-        <div class="panel-body">
-            <pre><code>&lt;datetime [(ngModel)]="date">&lt;/datetime></code></pre>
-            <datetime [(ngModel)]="date"></datetime>
-            <h5><strong>ngModel:</strong> {{getDate(date) | date: "medium"}}</h5>
-        </div>
-</section>-->
+    </div>
+    <div class="input-group bootstrap-timepicker timepicker">
+        <input id="idTimePicker" type="text" class="form-control input-small" 
+                >
+        <span class="input-group-addon"><i Class="glyphicon glyphicon-time"></i></span>
+    </div>
+    <button *ngIf="hasClearButton" type="button" (click)="onClearClick()">Clear</button>
+</div>
