Fixed weird buttons

--- a/public/app/components/create-event-poll-form/create-event-poll-form.component.html
+++ b/public/app/components/create-event-poll-form/create-event-poll-form.component.html
@@ -132,7 +132,7 @@
                     </div>
 
                     <!--More Options Buttons-->
-                    <div class="container" *ngIf="showFunding == false || showTransportation == false">
+                    <div class="container col-md-12" *ngIf="showFunding == false || showTransportation == false">
                         <h3>More Options</h3>
                         <button class="btn btn-info btn-block btn-lg" *ngIf="showFunding == false"
                             (click)="showFunding = true">
