--- a/public/app/components/home-page/home-page.component.html
+++ b/public/app/components/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default">
-    <h1 class="logo">[-PollEase-]</h1>
+    <img src="./images/logo.png" alt="[-PollEase-]">
 </nav>
 
 <div class="container">
