--- a/public/app/components/time-picker/time-picker.component.html
+++ b/public/app/components/time-picker/time-picker.component.html
@@ -1,15 +1,30 @@
-<div class="form-inline">
-    <div id="{{idDatePicker}}" class="input-group date">
-        <input type="text" class="form-control"
-                />
-        <div class="input-group-addon">
-            <span class="glyphicon glyphicon-th"></span>
-        </div>
-    </div>
-    <div class="input-group bootstrap-timepicker timepicker">
-        <input id="idTimePicker" type="text" class="form-control input-small" 
-                >
-        <span class="input-group-addon"><i Class="glyphicon glyphicon-time"></i></span>
-    </div>
-    <button *ngIf="hasClearButton" type="button" (click)="onClearClick()">Clear</button>
-</div>
+<ul class="list-group">
+   <li class="list-group-item list-group-item-info">
+      Event Times
+   </li>
+   <li  class="list-group-item"
+        *ngFor="let time of times">
+      <div class="input-group">
+        {{ time|date }}
+        <span class="input-group-btn">
+          <button class="btn btn-danger" (click)="removeTime(time)">
+            <span class="glyphicon-minus"></span>
+          </button>
+        </span>
+      </div>
+   </li>
+   <li class="list-group-item">
+       <div class="input-group">
+         <input  class="form-control" 
+            placeholder="Add Time"
+            [(ngModel)]="_temp" datetime-picker />
+         <span class="input-group-btn">
+            <button class="btn btn-info" (click)="addTime()" [disabled]="!_temp">
+                <span class="glyphicon-plus"></span>
+            </button>
+         </span>
+      </div>
+   </li>
+</ul>
+    
+    <pre>{{times|json}}</pre>
