--- a/public/app/components/create-event-poll-form/create-event-poll-form.component.html
+++ b/public/app/components/create-event-poll-form/create-event-poll-form.component.html
@@ -148,10 +148,11 @@
             </div>
         </div>
 
-        <div class="col-md-7">
+        <div class="col-md-7 submitBtn">
             <a class="btn btn-primary btn-block btn-lg" (click)="submit()">
                 Submit
             </a>
         </div>
     </div>
+    <pre>{{submitStatus|json}}</pre>
 </div>
