--- a/public/app/components/home-page/home-page.component.html
+++ b/public/app/components/home-page/home-page.component.html
@@ -1,23 +1,99 @@
+
 <nav class="navbar navbar-default">
-    <img src="./images/logo.png" alt="[-PollEase-]">
+    <img class = logoimg src="./images/pollease.png" alt="[-PollEase-]">
+    <!-- <a class = "about" href="/about">About</a> -->
+<div class = "topcontain">
+    <div class = "intro">
+        <h1 class="slogan">A Fast and Simple Way to Gather Information.</h1>
+    </div>
+</div>
 </nav>
 
-<div class="container">
-    <div class="content">
 
-        <h1 class="slogan">Hangout Planning Made Easy!</h1>
+<div class = "imgbackground">
 
-        <a class="btn btn-default btn-lg" routerLink="/createpoll">
-            Start Hangout Poll
-        </a>
+
+
+    <div class="container"> 
+
+        <div class = "content">
+
+<!--     <div class="content"> -->
+
+
+        <section class="midbox">
+                    <div class="paragraph">
+                        <h2>What is PollEase?</h2>
+                        <hr>
+                        <p>PollEase is a web application that will allow any user to easily be their own event planner. It will effectively connect event attendees with the host and enable the host to gather important information from attendees, like availability and location preferences, to assist them in planning the event for the group as a whole.</p>
+
+                        <!-- <img class = "comp" src="./images/computer1.jpg"> -->
+                    </div>
+
+
+        </section>
         
-        <h1 class="or">or</h1>
-        <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">
-            Get Your Active Polls
-        </button>
+        <!-- Hangout Planning Made Easy! -->
+
+        
+<!-- __________________________________________________________________________ -->
+
+    <section class = "buttons">
+
+        <div class = "button_one">
+            <button id = "one" style="margin-top:5px;" class="btn btn-primary colorsave">Save Color</button>
+        </div>
+
+        <div class = "button_two">
+            <button id = "two" style="margin-top:5px;" class="btn btn-primary colorsave" routerLink="/createpoll">Start Hangout Poll</button>
+        </div>
+
+        <div class = "button_three">
+            <button id = "three" style="margin-top:5px;" class="btn btn-primary colorsave">Get Your Active Polls</button>
+        </div>
+
+    </section>
+
+        <!-- <a class="btn btn-default btn-lg" routerLink="/createpoll">
+            Start Hangout Poll
+        </a> -->
+        
+        <!-- <h1 class="o -->
+
+
+
+
+            <section class="bg-contact">
+               <div class="container">
+                  <div class="row">
+                     <div class="col-md-8 col-md-offset-2">
+                        <h2>Contact Us</h2>
+                        <hr>
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="col-md-4 col-md-offset-2">
+                        <p><span class="glyphicon glyphicon-phone-alt"></span><br>214-768-1111</p>
+                     </div>
+                     <div class="col-md-4">
+                        <p><span class="glyphicon glyphicon-envelope"></span><br>pollEase@pollease.com</p>
+                     </div>
+                  </div>
+               </div>
+            </section>
+
+
+
+
+
+
+
+
+
+<!-- __________________________________________________________________________
 
         <!-- Modal -->
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -37,6 +113,8 @@
                 </div>
             </div>
         </div>
-        
-    </div><!-- end tabs -->
+ -->        
+
+        </div>
+    </div>
 </div>
