--- a/public/app/components/home-page/home-page.component.html
+++ b/public/app/components/home-page/home-page.component.html
@@ -40,9 +40,9 @@
 
     <section class = "buttons">
 
-        <div class = "button_one">
+        <!-- <div class = "button_one">
             <button id = "one" style="margin-top:5px;" class="btn btn-primary colorsave">Save Color</button>
-        </div>
+        </div> -->
 
         <div class = "button_two">
             <button id = "two" style="margin-top:5px;" class="btn btn-primary colorsave" routerLink="/createpoll">Start Hangout Poll</button>
