--- a/public/app/components/home-page/home-page.component.css
+++ b/public/app/components/home-page/home-page.component.css
@@ -27,7 +27,7 @@ div.topcontain {
     border-radius: 10px;
     font-size: 20px;
     padding-top: 600px;
-    margin-left: 220px;
+    margin-left: 230px;
     margin-right: 100px;
     /*background-color: rgba(134, 165, 218, 0.27);*/
     background-color: rgba(51, 139, 255, 0.62);
@@ -210,7 +210,7 @@ button {
 div.button_one {
     width: 20%;
     align-items: left;
-    margin-top: 40px;
+    margin-top: 60px;
     display: inline-flex;
     margin-left: 180px;
 }
@@ -218,8 +218,9 @@ div.button_one {
 div.button_two {
     width: 20%;
     align-self: center;
+    margin-top: 40px;
     display: inline-flex;
-    margin-left: 120px;
+    margin-left: 320px;
 
 }
 
@@ -227,14 +228,13 @@ div.button_three {
     width: 20%;
     align-self: left;
     display: inline-flex;
-    margin-left: 120px;
+    margin-left: 160px;
 }
 
 
-#one{
+/*#one{
     width: 250px;
     height: 55px;
-    /*padding: 1.05rem 2.75rem;*/
     color: rgba(51, 139, 255, 0.95);
     background-color: rgba(255, 255, 255, 0.75);
     font-size: 16px;
@@ -246,11 +246,11 @@ div.button_three {
     transition: color .3s,border .3s;
     align-self: right;
     align-items: left;
-}
+}*/
 
 #two{
-    width: 250px;
-    height: 55px;
+    width: 280px;
+    height: 60px;
     /*padding: 1.05rem 2.75rem;*/
     color: rgba(51, 139, 255, 0.85);
     background-color: rgba(255, 255, 255, 0.75);
@@ -265,8 +265,8 @@ div.button_three {
 }
 
 #three{
-    width: 250px;
-    height: 55px;
+    width: 280px;
+    height: 60px;
     /*padding: 1.05rem 2.75rem;*/
     color: rgba(51, 139, 255, 0.85);
     background-color: rgba(255, 255, 255, 0.75);
